@@ -5,6 +5,7 @@ Engine fixes:
 * Fixed equipment not being visible on the load game menu in cases where an item is shared across multiple equipment sets.
 * Fix potential crash in WidgetTabControl when trying to set an active tab when there is no tab already active.
 * Fix unintended file appending when loading mod metadata
+* Fix potential crash when tileset image can't be loaded.
 
 Translation updates:
 
